new invites and greeting added

--- a/.env
+++ b/.env
@@ -16,7 +16,7 @@ PORT2 = 443
 
 SESSION_LIFETIME = 1000
 
-email = preneursindia@gmail.com
+email = meelindiagroup@gmail.com
 
 emailpass = Lucky@786
 
