--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "mongoose": "^5.11.15",
     "multer": "^1.4.2",
     "nodemailer": "^6.4.17",
+    "passport": "^0.4.1",
+    "passport-google-oauth20": "^2.0.0",
     "path": "^0.12.7",
     "sha256": "^0.2.0"
   }
