--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "dotenv": " 8.2.0",
     "express": " 4.17.1",
     "express-edge": " 2.0.2",
+    "express-session": "^1.17.1",
     "fs": "0.0.1-security",
     "googleapis": "^39.2.0",
     "mongoose": " 5.11.15",
